# dubdub

./: .gitignore  README.md  build.gradle.kts  grammar_rules.ebnf  mypy.ini  pyproject.toml  rules.lark  rules_copy.lark  settings.gradle.kts  utilz.lark
docs/: functions.md  intro.md
docs/grammar/: placement.md
dubdub/: __init__.py  _help.py  callables.py  core.py  dastree.py  dubcall.py  env.py  errors.py  interpreter.py  nodes.py  operations.py  parser.py  repl.py  resolver.py  scanner.py  utils.py  valid.py  visitors.py
dubdub/base/grammars/: inits.lark  rules.lark
dubdub/primatives/: __init__.py  nodes.py  operations.py  types.py
notebooks/data/: dub_grammar.ebnf
notebooks/experiments/: lark_test.ipynb  lexer_primative.ipynb
src/main/kotlin/: main.kt
tests/: rules.lark  test_dubdub.py  test_grammar_lark.py  test_interpreter.py  test_scanner.py
tests/cmdexpr/: rules.lark
tests/features/: arithmetic.dhub  classes.dhub  closures.dhub  compare.dhub  control.dhub  datatypes.dhub  statement.dhub  variable.dhub
