[tool.poetry]
name = "dubdub"
version = "0.0.2"
description = ""
authors = ["Kevin Hill <kah.kevin.hill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
typer = { extras=["all"], version="^0.3.2" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dubdub = 'dubdub.core:app'
